ADD:WordKitsの名前入力画面に関するモデル・コントローラ・ビューの作成

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
       <%= link_to 'ゲームを開く', '#' %>
     </li>
     <li>
-      <%= link_to 'ゲームキットを作る', '#' %>
+      <%= link_to 'ゲームキットを作る', new_word_kits_path %>
     </li>
     <li>
       <%= link_to 'ゲームに参加する', '#' %>
