ADD:ゲームカード追加機能の実装

--- a/app/views/word_kits/new.html.erb
+++ b/app/views/word_kits/new.html.erb
@@ -2,7 +2,7 @@
 
 <p>ゲームキット名</p>
 
-  <%= form_with model: @word_kit do |f| %>
+  <%= form_with model: @word_kit, data: { turbo: false } do |f| %>
     <div>
       <%= f.label :name %>
       <%= f.text_field :name%>
