--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,5 +2,6 @@
   <h1>サイトロゴ</h1>
   <div class='menu_group'>
     <%= link_to 'ログアウト', logout_path, data: { turbo_method: :delete } %>
+    <%= link_to 'トップ', root_path %>
   </div>
 </header>
