--- a/app/views/word_kits/index.html.erb
+++ b/app/views/word_kits/index.html.erb
@@ -4,7 +4,8 @@
 <% @word_kits.each do |kit| %>
   <li>
     <%= kit.name %>
-    <%= link_to '削除', word_kit_path(kit), method: :delete, data: { confirm: "削除しますか？"} %>
+    <%= link_to '削除', word_kit_path(kit), data: { turbo_method: :delete, confirm: "削除しますか？" } %>
+    <%= link_to '編集', edit_word_kit_path(kit) %>
   </li>
 <% end %>
 </ul>
