--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <h1>トップページ</h1>
   <ul>
     <li>
-      <%= link_to 'ゲームを開く', '#' %>
+      <%= link_to 'ゲームを開く', word_kits_path %>
     </li>
     <li>
       <%= link_to 'ゲームキットを作る', new_word_kit_path %>
