--- a/app/views/word_kits/edit.html.erb
+++ b/app/views/word_kits/edit.html.erb
@@ -1,10 +1,11 @@
 <h1>キット編集</h1>
 
-<% form_with model: @word_kit do |f| %>
+<%= form_with model: @word_kit do |f| %>
   <div>
     <%= f.label :name %>
-    <%= f.text_field :name%>
+    <%= f.text_field :name %>
   </div>
+  <%= f.submit "更新" %>
 <% end %>
 
 <ul>
