--- a/app/views/word_kits/index.html.erb
+++ b/app/views/word_kits/index.html.erb
@@ -8,13 +8,8 @@
         <%= link_to '削除', word_kit_path(kit), data: { turbo_method: :delete, confirm: "削除しますか？" } %>
         <%= link_to '編集', edit_word_kit_path(kit) %>
         
-        <button data-action="click->modal#open">
-          このゲームで遊ぶ！
-        </button>
+        <%= link_to 'このゲームで遊ぶ！', game_rooms_path(word_kit_id: kit.id), data: { turbo_method: :post } %>
       </li>
     <% end %>
   </ul>
-  <div>
-    <%= render "shared/timer_modal" %>
-  </div>
 </div>
