--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,7 @@
       <%= link_to 'ゲームキットを作る', new_word_kit_path %>
     </li>
     <li>
-      <%= link_to 'ゲームに参加する', '#' %>
+      <%= link_to 'ゲームに参加する', new_participant_path %>
     </li>
   </ul>
 
