ADD:ゲーム参加者待機画面の作成（続き）

--- a/app/views/game_rooms/start.html.erb
+++ b/app/views/game_rooms/start.html.erb
@@ -2,6 +2,10 @@
 <p><%= @game_room.game_code %></p>
 
 <h2>残り時間</h2>
-<p id="timer" data-controller="timer" data-timer-target="timer" data-time-limit="<%= @game_room.time_limit * 60 %>"></p>
+<div data-controller="timer">
+  <p id="timer" data-timer-target="timer" data-time-limit="<%= @game_room.time_limit * 60 %>">
+    <%= @game_room.time_limit %>:00
+  </p>
+</div>
 
-<%= button_to "ゲーム終了！", finish_game_room_path(@game_room), method: :patch %>
+<%= button_to "ゲーム終了!", finish_game_room_path(@game_room), method: :patch %>
