--- a/app/views/game_rooms/show.html.erb
+++ b/app/views/game_rooms/show.html.erb
@@ -8,5 +8,5 @@
     <%= f.number_field :time_limit, min: 1, max: 60, value: 5 %>
   </div>
 
-  <%= f.submit 'ゲーム開始！' %>
+  <%= f.submit 'ゲーム開始！', id: "button" %>
 <% end %>
