ADD:問題出題画面の実装

--- a/app/views/word_kits/show.html.erb
+++ b/app/views/word_kits/show.html.erb
@@ -1,3 +1,5 @@
+<p><%= @current_question.japanese_translation %></p>
+
 <%= form_with url: answer_game_room_path(@game_room), method: :post do |f| %>
   <%= f.label :answer %>
   <%= f.text_field :answer %>
