--- a/app/views/word_kits/show.html.erb
+++ b/app/views/word_kits/show.html.erb
@@ -1,29 +1,34 @@
-<div
-  data-controller="game"
-  data-game-questions-value="<%= @questions.map { |q|
-    { english_word: q.english_word, japanese_translation: q.japanese_translation }
-  }.to_json %>"
->
+<div id="game_play" 
+     data-room-id="<%= @game_room.id %>"
+     data-participant-id="<%= @participant.id %>">
+  
+  <div
+    data-controller="game"
+    data-game-questions-value="<%= @questions.map { |q|
+      { english_word: q.english_word, japanese_translation: q.japanese_translation }
+    }.to_json %>"
+  >
+    <p data-game-target="question"></p>
 
-  <p data-game-target="question"></p>
+    <div>
+      <label for="answer-input">解答</label>
+      <input type="text" 
+             id="answer-input"
+             data-game-target="answer"
+             data-action="keydown.enter->game#submitAnswer">
+      <button type="button" 
+              data-action="click->game#submitAnswer">
+        解答
+      </button>
+    </div>
 
-  <div>
-    <label for="answer-input">解答</label>
-    <input type="text" 
-           id="answer-input"
-           data-game-target="answer"
-           data-action="keydown.enter->game#submitAnswer">
-    <button type="button" 
-            data-action="click->game#submitAnswer">
-      解答
-    </button>
+    <div>
+      <p data-game-target="feedback"></p>
+    </div>
   </div>
 
-  <div>
-    <p data-game-target="feedback"></p>
+  <div data-controller="score">
+    得点：<span data-score-target="value">0</span>
   </div>
-</div>
 
-<div data-controller="score">
-  得点：<span data-score-target="value">0</span>
 </div>
