--- a/app/views/game_rooms/waiting.html.erb
+++ b/app/views/game_rooms/waiting.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, "ゲームに参加する | VocaBoom!" %>
+
 <div id='game_waiting' data-room-id="<%= @game_room.id %>">
   <p>しばらくお待ちください</p>
   <p>他の参加者を待っています…</p>
