--- a/app/views/participants/new.html.erb
+++ b/app/views/participants/new.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, "ゲームに参加する | VocaBoom!" %>
+
 <h1>ゲーム参加</h1>
 
   <%= form_with url: participants_path, method: :post, local: true do |f| %>
