--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,8 @@
 <header>
-  <h1>サイトロゴ</h1>
+  <%= link_to root_path, class: "site-logo" do %>
+    <%= image_tag "vocaboom_site_logo.png", alt: "VocaBoom!" %>
+  <% end %>
+
   <div class='menu_group'>
     <%= link_to 'ログアウト', logout_path, data: { turbo_method: :delete } %>
     <%= link_to 'トップ', root_path %>
