FIX:ゲーム画面　問題遷移方法の場合わけ（正解時・不正解時）

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,12 @@
       <%= render 'shared/before_login_header' %>
     <% end %>
 
+    <% flash.each do |type, message| %>
+        <div class="flash <%= type %>">
+          <%= message %>
+        </div>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
