--- a/app/views/game_plays/overall_result.html.erb
+++ b/app/views/game_plays/overall_result.html.erb
@@ -1,8 +1,16 @@
 <% content_for :title, "結果発表 | VocaBoom!" %>
-<h1>結果発表！</h1>
 
+<h2>🏆 ランキング TOP3</h2>
 
+<ol>
+  <% medals = ["🥇", "🥈", "🥉"] %>
+  <% @top_players.each_with_index do |p, i| %>
+    <li>
+      <%= medals[i] %>
+      <%= p.nickname.presence || p.user&.name || p.guest&.name || "ゲスト" %>
+      ：<%= p.score %>点
+    </li>
+  <% end %>
+</ol>
 <%= link_to "トップに戻る", finish_game_room_path(@game_room), 
     data: { turbo_method: :delete } %>
-
-<h2>最終的にここは全体のランキング発表の側！ホストがリダイレクトする場所！</h2>
