FIX:個人結果表示場面に、ニックネームを使用

--- a/app/views/game_plays/personal_result.html.erb
+++ b/app/views/game_plays/personal_result.html.erb
@@ -2,7 +2,7 @@
 <h1>結果発表！</h1>
 
 <div>
-  <p>あなたの得点:<%= @participant.score %></p>
+  <p><%= @participant.nickname %>さんの得点:<%= @participant.score %></p>
 </div>
 
 <%= link_to "トップに戻る", root_path %>
