--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,13 +1,14 @@
 <% content_for :title, "トップページ | VocaBoom!" %>
-<h1>トップページ</h1>
-  <ul>
+
+<%= image_tag "title_logo.png", alt: "VocaBoom!", class: "title-logo"%>
+  <ul class="main-buttons">
     <li>
-      <%= link_to 'ゲームを開く', word_kits_path %>
+      <%= link_to 'ゲームを開く', word_kits_path, class: "main-button" %>
     </li>
     <li>
-      <%= link_to 'ゲームキットを作る', new_word_kit_path %>
+      <%= link_to 'ゲームキットを作る', new_word_kit_path, class: "main-button" %>
     </li>
     <li>
-      <%= link_to 'ゲームに参加する', new_participant_path %>
+      <%= link_to 'ゲームに参加する', new_participant_path, class: "main-button" %>
     </li>
   </ul>
