--- a/app/assets/stylesheets/top_page.css
+++ b/app/assets/stylesheets/top_page.css
@@ -6,12 +6,18 @@ html, body {
 body {
   min-height: 100vh;
   background-image: url("/assets/background.png");
+  background-attachment: fixed;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
 
 header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+
   display: flex;
   width: 100%;
   height: 100px;
@@ -37,20 +43,21 @@ header {
 .title-logo {
   width: 1000px;
   margin: 0 auto;
-  margin-top: -120px;
   display: block;
   filter: drop-shadow(0 6px 12px rgba(0,0,0,0.3));
+  margin-bottom: -100px;
 }
 
 .main-buttons {
   display: flex;
-  margin-top: -120px;
   justify-content: center;
   gap: 24px; /* ボタン同士の間 */
   list-style: none;
+  margin: 0 auto;
   padding: 0;
   position: relative;
   z-index: 10;
+  margin-top: -40px;
 }
 
 .main-button {
